# nightShift

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
docs/: bugfix_todo.md  config-reference.md  design.md  ideas.md  vibe.md  writer-and-coder.md  writer-idea.md
docs/devlog/: mvp-summary.md  phase10.md  phase11.md  phase12.md  phase13.md  phase14.md  phase15.md  phase16.md  phase7.md  phase8.md  phase9.md
docs/tutorial/: 01-intro.md
examples/quickstart-lisp/: nightshift.yaml
examples/quickstart-lisp/agents/: fake_planner.py  implementer.md
examples/templates/: nightshift.yaml
examples/tutorial/: 01-intro.md
examples/tutorial/03-pastebin/: README.md
nightshift/: __init__.py  agents.py  artifacts.py  cli.py  commands.py  config.py  context.py  errors.py  failures.py  git.py  integ.py  integ_setup.py  patches.py  pipeline.py  repo_tools.py  reports.py  runlog.py  status.py  tasks.py  telemetry.py  templates.py  terminal.py  version.py  what_happened.py  writing_validators.py
nightshift/project_templates/tutorial-novel/: .gitignore  README.md  STORY_FILES.md  (+2 more)
templates/: tasks.md
templates/agents/: implementer.md  planner.md  reviewer.md
tests/: test_agents.py  test_artifacts.py  test_commands.py  test_config.py  test_context.py  test_git.py  test_init.py  test_integ_setup.py  test_patches.py  test_pipeline.py  test_reliability_features.py  test_repo_tools.py  test_reports.py  test_status.py  test_tasks.py  test_terminal.py  test_version.py  test_what_happened.py  test_writing_validators.py
utils/textdoc-compile/: README.md  compile.py
(+8 files in other folders)
